syntax = "proto3";
option go_package = "./proto";
package dbfilter;

message Blacklist {
  string url = 1;
  string detectedAt = 2;
}

service DbFilterService {
  rpc Find(FindRequest) returns (FindResponse) {}
}

message FindRequest {
  string url = 1;
}

message FindResponse {
  bool found = 1;
  optional Blacklist blacklist = 2;
}